--- a/front-page.html
+++ b/front-page.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pup Power</title>
 </head>
 <body>
+   <header id="header"> <h1 id="logo">PUP POWER</h1>
+</header>
+    
     
 </body>
 </html>
