--- a/front-page.html
+++ b/front-page.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Pup Power</title>
 </head>
-<body>
+<body class="background">
    <header id="header"> <h1 id="logo">PUP POWER</h1>
 </header>
     
     
 </body>
 </html>
+
