--- a/front-page.html
+++ b/front-page.html
@@ -10,7 +10,10 @@
 <body class="background">
    <header id="header"> <h1 id="logo">PUP POWER</h1>
 </header>
-    
+<ul>
+    <li><a href="#"></a></li>
+</ul>
+
     
 </body>
 </html>
