Add navigation bar

--- a/front-page.html
+++ b/front-page.html
@@ -11,7 +11,10 @@
    <header id="header"> <h1 id="logo">PUP POWER</h1>
 </header>
 <ul>
-    <li><a href="#"></a></li>
+    <li class="pool-nav"><a href="#"></a>Pool</li>
+    <li class="playground-nav"><a href="#"></a>Playground</li>
+    <li class="gym-nav"><a href="#"></a>Gym</li>
+    <li class="bar-nav"><a href="#"></a>Bar</li>
 </ul>
 
     
