Add basic nav bar structure and styling, change logo font

--- a/front-page.html
+++ b/front-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,24 @@
     <link rel="stylesheet" href="style.css">
     <title>Pup Power</title>
 </head>
+
 <body class="background">
-   <header id="header"> <h1 id="logo">PUP POWER</h1>
-</header>
-<ul>
-    <li class="pool-nav"><a href="#"></a>Pool</li>
-    <li class="playground-nav"><a href="#"></a>Playground</li>
-    <li class="gym-nav"><a href="#"></a>Gym</li>
-    <li class="bar-nav"><a href="#"></a>Bar</li>
-</ul>
+    <header id="header">
+        <h1 id="logo">PUP POWER</h1>
+    </header>
+    <div>
+        <nav>
+            <ul id="menu">
+                <li><a href="front-page.html">Home</a></li>
+                <li><a href="#">Pool</a></li>
+                <li><a href="#">Playground</a></li>
+                <li><a href="#">Gym</a></li>
+                <li><a href="#">Bar</a></li>
+            </ul>
+        </nav>
+    </div>
 
-    
+
 </body>
-</html>
 
+</html>
