Edit nav bar position with css grid

--- a/front-page.html
+++ b/front-page.html
@@ -13,14 +13,14 @@
     <header id="header">
         <h1 id="logo">PUP POWER</h1>
     </header>
-    <div>
+    <div class="nav">
         <nav>
             <ul id="menu">
-                <li><a href="front-page.html">Home</a></li>
-                <li><a href="#">Pool</a></li>
-                <li><a href="#">Playground</a></li>
-                <li><a href="#">Gym</a></li>
-                <li><a href="#">Bar</a></li>
+                <li><a href="front-page.html">HOME</a></li>
+                <li><a href="#">POOL</a></li>
+                <li><a href="#">PLAYGROUND</a></li>
+                <li><a href="#">GYM</a></li>
+                <li><a href="#">BAR</a></li>
             </ul>
         </nav>
     </div>
