--- a/front-page.html
+++ b/front-page.html
@@ -11,7 +11,7 @@
 
 <body class="background">
     <header id="header">
-        <h1 id="logo">PUP POWER</h1>
+        <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
     </header>
     <div class="nav">
         <nav>
@@ -25,7 +25,7 @@
         </nav>
     </div>
 
-
+    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
