--- a/front-page.html
+++ b/front-page.html
@@ -23,7 +23,12 @@
                 <li><a href="#">BAR</a></li>
             </ul>
         </nav>
+        <div>
+            <h2>Dublin's first Dog only Sports & Leisure centre</h2>
+        </div>
     </div>
+
+
 
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
 </body>
