--- a/front-page.html
+++ b/front-page.html
@@ -23,10 +23,14 @@
                 <li><a href="#">BAR</a></li>
             </ul>
         </nav>
-        <div>
-            <h2>Dublin's first Dog only Sports & Leisure centre</h2>
-        </div>
     </div>
+    <div>
+        <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure centre</h2>
+    </div>
+
+    <div class="intro"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+    </div>
+
 
 
 
