--- a/front-page.html
+++ b/front-page.html
@@ -27,10 +27,12 @@
     <div>
         <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure centre</h2>
     </div>
-
-    <div class="intro"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+<div>
+    <div class="circle-1"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
-
+    <div class="circle-2"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+    </div>
+</div>
 
 
 
