--- a/front-page.html
+++ b/front-page.html
@@ -27,12 +27,16 @@
     <div>
         <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure centre</h2>
     </div>
-<div>
+<section id="circle-images">
     <div class="circle-1"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
     <div class="circle-2"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
+    <div class="circle-3"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+    </div>
+    <div class="circle-4"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">  
 </div>
+</section>
 
 
 
