Add text to first circle image

--- a/front-page.html
+++ b/front-page.html
@@ -28,7 +28,11 @@
         <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure centre</h2>
     </div>
 <section id="circle-images">
-    <div class="circle-1"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+    <div class="circle-1">
+        <h3 id="pool">POOL</h3>
+        <div id="circle-text-1">
+       Check out our pool area!<br> Our exclusive 2m swimming pools are fitted for<br>every breed. We offer free swimming lessons to <br>pups under 12 months. All our swimming pools <br> are PETA approved. 
+    </div> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
     <div class="circle-2"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
