Add text to first circle, add pool page

--- a/front-page.html
+++ b/front-page.html
@@ -14,7 +14,7 @@
         <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
     </header>
     <div class="nav">
-        <nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <ul id="menu">
                 <li><a href="front-page.html">HOME</a></li>
                 <li><a href="#">POOL</a></li>
@@ -31,7 +31,7 @@
     <div class="circle-1">
         <h3 id="pool">POOL</h3>
         <div id="circle-text-1">
-       Check out our pool area!<br> Our exclusive 2m swimming pools are fitted for<br>every breed. We offer free swimming lessons to <br>pups under 12 months. All our swimming pools <br> are PETA approved. 
+            Check out our pool area!<br> Our exclusive 10m swimming pools are fitted<br>for every breed. Our pools are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned thoroughly<br>throughout the day with a brand new filtering<br>system to make sure yours and your dogs health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All our<br>swimming pools are PETA approved. 
     </div> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
     </div>
     <div class="circle-2"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
