--- a/front-page.html
+++ b/front-page.html
@@ -25,22 +25,34 @@
         </nav>
     </div>
     <div>
-        <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure centre</h2>
+        <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure
+            centre</h2>
     </div>
-<section id="circle-images">
-    <div class="circle-1">
-        <h3 id="pool">POOL</h3>
-        <div id="circle-text-1">
-            Check out our pool area!<br> Our exclusive 10m swimming pools are fitted<br>for every breed. Our pools are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned thoroughly<br>throughout the day with a brand new filtering<br>system to make sure yours and your dogs health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All our<br>swimming pools are PETA approved. 
-    </div> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
-    </div>
-    <div class="circle-2"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
-    </div>
-    <div class="circle-3"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
-    </div>
-    <div class="circle-4"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">  
-</div>
-</section>
+    <section id="circle-images">
+        <div class="circle-1">
+            <h3 id="pool">POOL</h3>
+            <div id="circle-text-1">
+                Check out our pool area!<br> Our exclusive 10m swimming pools are fitted<br>for every breed. Our pools
+                are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned
+                thoroughly<br>throughout the day with a brand new filtering<br>system to make sure yours and your dogs
+                health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All
+                our<br>swimming pools are PETA approved.</div>
+            <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        </div>
+        <div class="circle-2">
+            <h3 id="playground">PLAYGROUND</h3>
+            <div id="circle-text-2"> Visit our playground! Formerly known as<br>St. Anne's park, newly renovated, fully
+                equiped<br>dog playground. Ranging from professional<br>training equipment to chewy toys. We have it
+                all!<br>The playground is spread acros 100 acres to accommodate all your needs. Our playground
+                is<br>fully fenced and monitored through the day<br>offering a safe environment for you and your<br>pup!
+            </div>
+            <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        </div>
+        <div class="circle-3"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        </div>
+        <div class="circle-4"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        </div>
+    </section>
 
 
 
