Add text to third circle box, front-page

--- a/front-page.html
+++ b/front-page.html
@@ -48,7 +48,13 @@
             </div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
-        <div class="circle-3"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        <div class="circle-3">
+            <h3 id="gym">GYM</h3>
+            <div id="circle-text-3">Try out our gym! Ireland's first dog only gym!<br>Need help preparing for a
+                competition or just<br>staying in shape, we got you covered! With<br>more than 250 machines available,
+                all ground<br>floor for accessibility, free lockers and staff on<br>site ready to help! The gym is
+                thoroughly cleaned<br>and sanitezed after every visit.</div>
+            <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
         <div class="circle-4"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
