Add text to circle four, front-page

--- a/front-page.html
+++ b/front-page.html
@@ -41,8 +41,8 @@
         </div>
         <div class="circle-2">
             <h3 id="playground">PLAYGROUND</h3>
-            <div id="circle-text-2"> Visit our playground! Formerly known as<br>St. Anne's park, newly renovated, fully
-                equiped<br>dog playground. Ranging from professional<br>training equipment to chewy toys. We have it
+            <div id="circle-text-2"> Visit our playground!<br>Formerly known as St. Anne's park, newly<br>renovated, fully
+                equiped dog playground.<br>Ranging from professional training equipment<br>to chewy toys. We have it
                 all!<br>The playground is spread acros 100 acres to accommodate all your needs. Our playground
                 is<br>fully fenced and monitored through the day<br>offering a safe environment for you and your<br>pup!
             </div>
@@ -50,13 +50,16 @@
         </div>
         <div class="circle-3">
             <h3 id="gym">GYM</h3>
-            <div id="circle-text-3">Try out our gym! Ireland's first dog only gym!<br>Need help preparing for a
-                competition or just<br>staying in shape, we got you covered! With<br>more than 250 machines available,
-                all ground<br>floor for accessibility, free lockers and staff on<br>site ready to help! The gym is
-                thoroughly cleaned<br>and sanitezed after every visit.</div>
+            <div id="circle-text-3">Try out our gym!<br>Ireland's first dog only gym! Need help<br>preparing for a
+                competition or just staying in<br>shape, we got you covered! With more than 250<br>machines available,
+                all ground floor for<br>accessibility, free lockers and staff on site ready<br>to help! The gym is
+                thoroughly cleaned and<br>sanitezed after every visit.</div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
-        <div class="circle-4"> <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
+        <div class="circle-4"> 
+            <h3 id="bar">BAR</h3>
+            <div id="circle-text-4">Relax in our bar!<br>A perfect place to end the day (Or start😉)!<br>Enjoy our wide range of food and drinks.<br>Schedule an appointment for your pup in any<br>of our three facilities and enjoy a drink on us!<br>Bring your pup with you and get a<br>complimentary puppaccino with your order.<br>For really tired pups there is a lounge area with<br>All You Can Chew! Amazing, right? </div>
+            <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
     </section>
 
