Edit playground circle text

--- a/front-page.html
+++ b/front-page.html
@@ -43,7 +43,7 @@
             <h3 id="playground">PLAYGROUND</h3>
             <div id="circle-text-2"> Visit our playground!<br>Formerly known as St. Anne's park, newly<br>renovated, fully
                 equiped dog playground.<br>Ranging from professional training equipment<br>to chewy toys. We have it
-                all!<br>The playground is spread acros 100 acres to accommodate all your needs. Our playground
+                all!<br>The playground is spread acros 100 acres to<br>accommodate all your needs. Our playground
                 is<br>fully fenced and monitored through the day<br>offering a safe environment for you and your<br>pup!
             </div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
