Add footer, change nav bar styling

--- a/front-page.html
+++ b/front-page.html
@@ -10,23 +10,22 @@
 </head>
 
 <body class="background">
-    <header id="header">
-        <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
-    </header>
-    <div class="nav">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <ul id="menu">
-                <li><a href="front-page.html">HOME</a></li>
-                <li><a href="#">POOL</a></li>
-                <li><a href="#">PLAYGROUND</a></li>
-                <li><a href="#">GYM</a></li>
-                <li><a href="#">BAR</a></li>
+    <header>
+        <div class="nav">
+            <nav>
+       
+            <ul id="menu"> <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
+                <li class="home"><a href="front-page.html">HOME</a></li>
+                <li class="pool"><a href="#">POOL</a></li>
+                <li class="playground"><a href="#">PLAYGROUND</a></li>
+                <li class="gym"><a href="#">GYM</a></li>
+                <li class="bar"><a href="#">BAR</a></li>
             </ul>
         </nav>
     </div>
+</header>
     <div>
-        <h2 class="intro-text-box"><i class="fa-solid fa-angle-right"></i> Dublin's first Dog only Sports & Leisure
-            centre</h2>
+        <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     </div>
     <section id="circle-images">
         <div class="circle-1">
@@ -64,7 +63,14 @@
     </section>
 
 
+<footer>
+    <ul class="footer">CONTACT US!
+        <li>Email: customer-service@puppower.com</li>
+        <li>Tel: +353 83 1234 567</li>
+    </ul>
 
+
+</footer>
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
 </body>
 
