Add basic styling to pool.html page

--- a/front-page.html
+++ b/front-page.html
@@ -13,17 +13,18 @@
     <header>
         <div class="nav">
             <nav>
-       
-            <ul id="menu"> <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
-                <li class="home"><a href="front-page.html">HOME</a></li>
-                <li class="pool"><a href="#">POOL</a></li>
-                <li class="playground"><a href="#">PLAYGROUND</a></li>
-                <li class="gym"><a href="#">GYM</a></li>
-                <li class="bar"><a href="#">BAR</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+
+                <ul id="menu">
+                    <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
+                    <li class="home"><a href="front-page.html">HOME</a></li>
+                    <li class="pool"><a href="pool.html">POOL</a></li>
+                    <li class="playground"><a href="#">PLAYGROUND</a></li>
+                    <li class="gym"><a href="#">GYM</a></li>
+                    <li class="bar"><a href="#">BAR</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     </div>
@@ -40,10 +41,12 @@
         </div>
         <div class="circle-2">
             <h3 id="playground">PLAYGROUND</h3>
-            <div id="circle-text-2"> Visit our playground!<br>Formerly known as St. Anne's park, newly<br>renovated, fully
+            <div id="circle-text-2"> Visit our playground!<br>Formerly known as St. Anne's park, newly<br>renovated,
+                fully
                 equiped dog playground.<br>Ranging from professional training equipment<br>to chewy toys. We have it
                 all!<br>The playground is spread acros 100 acres to<br>accommodate all your needs. Our playground
-                is<br>fully fenced and monitored through the day<br>offering a safe environment for you and your<br>pup!
+                is<br>fully fenced and monitored throughout the day<br>offering a safe environment for you and
+                your<br>pup!
             </div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
@@ -55,22 +58,22 @@
                 thoroughly cleaned and<br>sanitezed after every visit.</div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
-        <div class="circle-4"> 
+        <div class="circle-4">
             <h3 id="bar">BAR</h3>
-            <div id="circle-text-4">Relax in our bar!<br>A perfect place to end the day (Or start😉)!<br>Enjoy our wide range of food and drinks.<br>Schedule an appointment for your pup in any<br>of our three facilities and enjoy a drink on us!<br>Bring your pup with you and get a<br>complimentary puppaccino with your order.<br>For really tired pups there is a lounge area with<br>All You Can Chew! Amazing, right? </div>
+            <div id="circle-text-4">Relax in our bar!<br>A perfect place to end the day (Or start😉)!<br>Enjoy our wide
+                range of food and drinks.<br>Schedule an appointment for your pup in any<br>of our three facilities and
+                enjoy a drink on us!<br>Bring your pup with you and get a<br>complimentary puppaccino with your
+                order.<br>For really tired pups there is a lounge area with<br>All You Can Chew! Amazing, right? </div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
     </section>
-
-
-<footer>
-    <ul class="footer">CONTACT US!
-        <li>Email: customer-service@puppower.com</li>
-        <li>Tel: +353 83 1234 567</li>
-    </ul>
-
-
-</footer>
+    <footer>
+        <ul class="footer">CONTACT US!
+            <li>Email: customer-service@puppower.com</li>
+            <li>Tel: +353 83 1234 567</li>
+            <li>Address:</li>
+        </ul>
+    </footer>
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
 </body>
 
