--- a/pool.html
+++ b/pool.html
@@ -26,11 +26,32 @@
         </div>
     </header>
     <div>
-        <h2 class="intro-text-box">WELCOME TO OUR POOL!</h2>
+        <h2 class="intro-text-box">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
     </div>
     <section>
         <div id="goldie-pool">
             <img src="images/goldie_pool.jpg" alt="Golden retriever in a pool">
+        </div>
+        <div>
+            <p class="pool-text">
+               <strong>March offer!</strong>
+                Become a gold member for only €50 a month!
+                Enjoy all benefits of our gold members for half a price this march. This promotion includes usage of pool and the bar only. T&C's apply. 
+            </p>
+
+            <p class="pool-text">
+                Our pools are newly built. 
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <ul class="pool-info">
+                <li>Pools are open everyday Mon-Sat</li>
+                <li>Mon-Thu 08:00 - 21:00</li>
+                <li>Fri-Sat 08:00 - 18:00</li>
+            </ul>
         </div>
     </section>
 
