Change nav bar styling using css grid

--- a/front-page.html
+++ b/front-page.html
@@ -10,24 +10,19 @@
 </head>
 
 <body class="background">
-    <header>
-        <div class="nav">
-            <nav>
-
-                <ul id="menu">
-                    <h1 id="logo">PUP POWER <i class="fa-solid fa-paw"></i></h1>
-                    <li class="home"><a href="front-page.html">HOME</a></li>
-                    <li class="pool"><a href="pool.html">POOL</a></li>
-                    <li class="playground"><a href="#">PLAYGROUND</a></li>
-                    <li class="gym"><a href="#">GYM</a></li>
-                    <li class="bar"><a href="#">BAR</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header> 
+          
     </header>
-    <div>
+    <nav class="nav">
+        <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+            <li class="home"><a href="front-page.html">HOME</a></li>
+            <li class="pool"><a href="pool.html">POOL</a></li>
+            <li class="playground"><a href="#">PLAYGROUND</a></li>
+            <li class="gym"><a href="#">GYM</a></li>
+            <li class="bar"><a href="#">BAR</a></li>
+        </ul>
+    </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
-    </div>
     <section id="circle-images">
         <div class="circle-1">
             <h3 id="pool">POOL</h3>
@@ -46,7 +41,7 @@
                 equiped dog playground.<br>Ranging from professional training equipment<br>to chewy toys. We have it
                 all!<br>The playground is spread acros 100 acres to<br>accommodate all your needs. Our playground
                 is<br>fully fenced and monitored throughout the day<br>offering a safe environment for you and
-                your<br>pup!
+                your<br>pup! 
             </div></p>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
