--- a/front-page.html
+++ b/front-page.html
@@ -31,7 +31,7 @@
                 are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned
                 thoroughly<br>throughout the day with a brand new filtering<br>system to make sure yours and your dogs
                 health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All
-                our<br>swimming pools are PETA approved.</div></p>
+                our<br>swimming pools are PETA approved.</p></div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
         <div class="circle-2">
@@ -42,7 +42,7 @@
                 all!<br>The playground is spread acros 100 acres to<br>accommodate all your needs. Our playground
                 is<br>fully fenced and monitored throughout the day<br>offering a safe environment for you and
                 your<br>pup! 
-            </div></p>
+            </p></div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
         <div class="circle-3">
@@ -50,7 +50,7 @@
             <div id="circle-text-3"><p>Try out our gym!<br>Ireland's first dog only gym! Need help<br>preparing for a
                 competition or just staying in<br>shape, we got you covered! With more than 250<br>machines available,
                 all ground floor for<br>accessibility, free lockers and staff on site ready<br>to help! The gym is
-                thoroughly cleaned and<br>sanitezed after every visit.</div></p>
+                thoroughly cleaned and<br>sanitezed after every visit.</p></div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
         <div class="circle-4">
@@ -58,7 +58,7 @@
             <div id="circle-text-4"><p>Relax in our bar!<br>A perfect place to end the day (Or start😉)!<br>Enjoy our wide
                 range of food and drinks.<br>Schedule an appointment for your pup in any<br>of our three facilities and
                 enjoy a drink on us!<br>Bring your pup with you and get a<br>complimentary puppaccino with your
-                order.<br>For really tired pups there is a lounge area with<br>All You Can Chew! Amazing, right?</div></p>
+                order.<br>For really tired pups there is a lounge area with<br>All You Can Chew! Amazing, right?</p></div>
             <img src="images/shutterstock_image (1).png" alt="Background transparent circle">
         </div>
     </section>
@@ -66,7 +66,7 @@
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
-            <li>Address:</li>
+            <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
