Add two circle images front page html

--- a/front-page.html
+++ b/front-page.html
@@ -23,7 +23,12 @@
         </ul>
     </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
-    
+    <div class="container-1">
+        <img class=img-1 src="images/circle-image.png" alt="circle background image">
+    </div>
+    <div class="container-2">
+        <img class=img-2 src="images/circle-image.png" alt="circle background image">
+    </div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
