Add and position circle images using css grid

--- a/front-page.html
+++ b/front-page.html
@@ -29,6 +29,12 @@
     <div class="container-2">
         <img class=img-2 src="images/circle-image.png" alt="circle background image">
     </div>
+    <div class="container-3">
+        <img class=img-3 src="images/circle-image.png" alt="circle background image">
+    </div>
+    <div class="container-4">
+        <img class=img-4 src="images/circle-image.png" alt="circle background image">
+    </div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
