Add media query for screen width max 1500px

--- a/front-page.html
+++ b/front-page.html
@@ -24,16 +24,16 @@
     </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-        <img class=img-1 src="images/circle-image.png" alt="circle background image">
+        <img class=img-1 src="images/circle-image-600.png" alt="circle background image">
     </div>
     <div class="container-2">
-        <img class=img-2 src="images/circle-image.png" alt="circle background image">
+        <img class=img-2 src="images/circle-image-600.png" alt="circle background image">
     </div>
     <div class="container-3">
-        <img class=img-3 src="images/circle-image.png" alt="circle background image">
+        <img class=img-3 src="images/circle-image-600.png" alt="circle background image">
     </div>
     <div class="container-4">
-        <img class=img-4 src="images/circle-image.png" alt="circle background image">
+        <img class=img-4 src="images/circle-image-600.png" alt="circle background image">
     </div>
     <footer>
         <ul class="footer">CONTACT US!
