Position and style text in first circle

--- a/pool.html
+++ b/pool.html
@@ -33,7 +33,7 @@
             <img src="images/goldie_pool.jpg" alt="Golden retriever in a pool">
         </div>
         <div>
-            <p class="pool-text">
+            <p class="goldie-text">
                <strong>March offer!</strong>
                 Become a gold member for only €50 a month!
                 Enjoy all benefits of our gold members for half a price this march. This promotion includes usage of pool and the bar only. T&C's apply. 
