--- a/front-page.html
+++ b/front-page.html
@@ -10,7 +10,7 @@
 </head>
  
 <body class="background">
-    <header> 
+    <header>  
           
     </header>
     <nav class="nav">
@@ -24,7 +24,7 @@
     </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-        <p class="pool">POOL<br>Check out our pool area!<br> Our exclusive 10m swimming pools are fitted<br>for every breed. Our pools are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned
+        <p class="pool-text">POOL<br>Check out our pool area!<br> Our exclusive 10m swimming pools are fitted<br>for every breed. Our pools are equiped with<br>16kW Hewalex heat pumps to ensure pleasant<br>temperatures all year round, cleaned
             thoroughly<br>throughout the day with a brand new filtering<br>system to make sure yours and your dogs
             health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All
             our<br>swimming pools are PETA approved.</p>
