--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-        <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
-    <p class="pool-text">Check out our pool area!<br> Our exclusive 10m swimming pools are<br>fitted for every breed. Our pools are<br>equiped with 16kW Hewalex heat pumps<br>to ensure pleasant temperatures all year<br>round, cleaned
-            thoroughly throughout the<br>day with a brand new filtering system<br>to make sure yours and your dogs
-            health<br>are a top priority. We offer free swimming <br>lessons to pups under 12 months. All
-            our<br>swimming pools are PETA approved.</p>
+        <!-- <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2> -->
+    <p class="pool-text">Check out our pool area!Our exclusive 10m swimming pools are fitted for every breed. 
+        Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
+            thoroughly throughout the day with a brand new filtering system to make sure yours and your dogs
+            health are a top priority. We offer free swimming lessons to pups under 12 months. All
+            our swimming pools are PETA approved.</p>
     </div>
     <div class="container-2">
         
