Add pool title back and scale to size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-        <!-- <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2> -->
+     <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
     <p class="pool-text">Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed. 
         Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
             thoroughly throughout the day with a brand new filtering system to make sure yours and your dogs
