--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
  
 <body class="background">
-    <header>  
-          
+    <header class="nav">  
+        <nav>
+            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+                <li class="home"><a href="index.html">HOME</a></li>
+                <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
+                <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
+                <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
+                <li class="bar"><a href="#">BAR</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="nav">
-        <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-            <li class="home"><a href="front-page.html">HOME</a></li>
-            <li class="pool"><a href="pool.html">POOL</a></li>
-            <li class="playground"><a href="#">PLAYGROUND</a></li>
-            <li class="gym"><a href="#">GYM</a></li>
-            <li class="bar"><a href="#">BAR</a></li>
-        </ul>
-    </nav>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
      <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
