--- a/gym.html
+++ b/gym.html
@@ -9,19 +9,18 @@
     <title>Pup Power</title>
 </head>
  
-<body class="background">
-    <header>  
-          
+<body class="background-gym">
+    <header class="nav">  
+        <nav>
+            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+                <li class="home"><a href="index.html" target="blank" rel="noopener">HOME</a></li>
+                <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
+                <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
+                <li class="gym"><a href="gym.html">GYM</a></li>
+                <li class="bar"><a href="#">BAR</a></li>
+            </ul>
+        </nav> 
     </header>
-    <nav class="nav">
-        <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-            <li class="home"><a href="index.html" target="blank" rel="noopener">HOME</a></li>
-            <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
-            <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-            <li class="gym"><a href="gym.html">GYM</a></li>
-            <li class="bar"><a href="#">BAR</a></li>
-        </ul>
-    </nav>
            <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
