--- a/pool.html
+++ b/pool.html
@@ -11,18 +11,17 @@
     </head>
      
     <body class="background-pool">
-        <header>  
-              
+        <header class="nav">  
+            <nav>
+                <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+                    <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
+                    <li class="pool"><a href="pool.html">POOL</a></li>
+                    <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
+                    <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
+                    <li class="bar"><a href="#">BAR</a></li>
+                </ul>
+            </nav>
         </header>
-        <nav class="nav">
-            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
-                <li class="pool"><a href="pool.html">POOL</a></li>
-                <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
-                <li class="bar"><a href="#">BAR</a></li>
-            </ul>
-        </nav>
     <div>
         <h2 class="intro-text-box">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
     </div>
