Change hover effect on logo

--- a/pool.html
+++ b/pool.html
@@ -34,11 +34,7 @@
             <p class="goldie-text">
                <strong>March offer!</strong>
                 Become a gold member for only €50 a month!
-                Enjoy all benefits of our gold members for half a price this march. This promotion includes usage of pool and the bar only. T&C's apply. 
-            </p>
-
-            <p class="pool-text">
-                Our pools are newly built. 
+                Enjoy all benefits of our gold members for half a price this March. This promotion includes usage of pool and the bar only. T&C's apply. 
             </p>
         </div>
     </section>
@@ -46,7 +42,7 @@
     <section>
         <div>
             <ul class="pool-info">
-                <li>Pools are open everyday Mon-Sat</li>
+                <li>Pools are open Mon-Sat</li>
                 <li>Mon-Thu 08:00 - 21:00</li>
                 <li>Fri-Sat 08:00 - 18:00</li>
             </ul>
