--- a/pool.html
+++ b/pool.html
@@ -13,7 +13,7 @@
     <body class="background-pool">
         <header class="nav">  
             <nav>
-                <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+                <ul id="menu1"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
                     <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
                     <li class="pool"><a href="pool.html">POOL</a></li>
                     <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
@@ -25,18 +25,16 @@
     <div>
         <h2 class="intro-text-box">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
     </div>
-    <section>
-        <div id="goldie-pool">
-            
+    <section class="section1">
+        <div class="image-container">
 
         </div>
-        <div>
-            <p class="goldie-text">
+        
+            <p class="march-offer">
                <strong>March offer!</strong>
                 Become a gold member for only €50 a month!
                 Enjoy all benefits of our gold members for half a price this March. This promotion includes usage of pool and the bar only. T&C's apply. 
             </p>
-        </div>
     </section>
 
     <section>
@@ -49,8 +47,8 @@
         </div>
     </section>
 
-    <footer>
-        <ul class="footer">CONTACT US!
+    <footer class="footer-pool">
+        <ul class="footer1">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
             <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
