Update all media queries font sizes

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </header>
         <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-     <h2 id="pool-title" ><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
+     <h2 id="pool-title"><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
     <p class="pool-text">Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed. 
         Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
-            thoroughly throughout the day with a brand new filtering system to make sure yours and your dogs
-            health are a top priority. We offer free swimming lessons to pups under 12 months. All
+            thoroughly throughout the day with a brand new filtering system to ensure your dogs
+            health is a top priority. We offer free swimming lessons to pups under 12 months. All
             our swimming pools are PETA approved.</p>
     </div>
     <div class="container-2">
@@ -39,6 +39,7 @@
     <div class="container-4">
         
     </div>
+   
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
