--- a/pool.html
+++ b/pool.html
@@ -11,8 +11,8 @@
     </head>
      
     <body class="background-pool">
-        <header class="nav">  
-            <nav>
+        <header> </header>  
+            <nav class="nav"> 
                 <ul id="menu1"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
                     <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
                     <li class="pool"><a href="pool.html">POOL</a></li>
@@ -21,20 +21,17 @@
                     <li class="bar"><a href="#">BAR</a></li>
                 </ul>
             </nav>
-        </header>
     <div>
-        <h2 class="intro-text-box">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
+        <h2 class="intro-text-box1">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
     </div>
-    <section class="section1">
-        <div class="image-container">
-
-        </div>
-        
+    <section>
+        <div class="offer">
             <p class="march-offer">
                <strong>March offer!</strong>
                 Become a gold member for only €50 a month!
                 Enjoy all benefits of our gold members for half a price this March. This promotion includes usage of pool and the bar only. T&C's apply. 
             </p>
+        </div>
     </section>
 
     <section>
