Add image and simple text to pool html page

--- a/pool.html
+++ b/pool.html
@@ -11,8 +11,8 @@
     </head>
      
     <body class="background-pool">
-        <header> </header>  
-            <nav class="nav"> 
+        <header  class="nav">   
+            <nav> 
                 <ul id="menu1"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
                     <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
                     <li class="pool"><a href="pool.html">POOL</a></li>
@@ -21,20 +21,15 @@
                     <li class="bar"><a href="#">BAR</a></li>
                 </ul>
             </nav>
-    <div>
+        </header>
         <h2 class="intro-text-box1">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
-    </div>
-    <section>
-        <div class="offer">
-            <p class="march-offer">
-               <strong>March offer!</strong>
-                Become a gold member for only €50 a month!
-                Enjoy all benefits of our gold members for half a price this March. This promotion includes usage of pool and the bar only. T&C's apply. 
-            </p>
-        </div>
-    </section>
+        <div class="container-1">
+            <h2>MARCH OFFER</h2>
+           <p class="march-offer">Become a gold member for only €50 a month!
+            Enjoy all benefits of our gold members for half a price this March. 
+            This promotion includes usage of pool and the bar only. T&C's apply. </p>
+           </div>
 
-    <section>
         <div>
             <ul class="pool-info">
                 <li>Pools are open Mon-Sat</li>
@@ -42,7 +37,7 @@
                 <li>Fri-Sat 08:00 - 18:00</li>
             </ul>
         </div>
-    </section>
+    
 
     <footer class="footer-pool">
         <ul class="footer1">CONTACT US!
