Add text to index html, add bar html

--- a/playground.html
+++ b/playground.html
@@ -17,7 +17,7 @@
                     <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
                     <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
                     <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
-                    <li class="bar"><a href="#">BAR</a></li>
+                    <li class="bar"><a href="bar.html" target="_blank" rel="noopener">BAR</a></li>
                 </ul>
             </nav>
         </header>
