--- a/bar.html
+++ b/bar.html
@@ -9,19 +9,21 @@
     <title>Pup Power</title>
 </head>
  
-<body class="background-gym">
+<body class="background">
     <header class="nav">  
         <nav>
             <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                <li class="home"><a href="index.html" target="blank" rel="noopener">HOME</a></li>
+                <li class="home"><a href="index.html">HOME</a></li>
                 <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
                 <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html">GYM</a></li>
-                <li class="bar"><a href="bar.html" target="_blank" rel="noopener">BAR</a></li>
+                <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
+                <li class="bar"><a href="bar.html">BAR</a></li>
             </ul>
-        </nav> 
+        </nav>
     </header>
-           <footer>
+        <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
+   
+    <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
