Add join button and basic form

--- a/pool.html
+++ b/pool.html
@@ -24,12 +24,14 @@
         </header>
         <h2 class="intro-text-box1">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
         <div class="container-1">
-            <h2>MARCH OFFER</h2>
-           <p class="march-offer">Become a gold member for only €50 a month!
+            <h2 id="march-title">MARCH OFFER</h2>
+           <p class="march-offer">Become a GOLD member for only €50 a month!
             Enjoy all benefits of our gold members for half a price this March. 
-            This promotion includes usage of pool and the bar only. T&C's apply. </p>
+            This promotion includes usage of pool and the bar only. T&C's apply.</p>
+            <a href="form.html" target="_blank" rel="noopener" class="form-btn">
+                Join Now
+            </a>
            </div>
-
         <div>
             <ul class="pool-info">
                 <li>Pools are open Mon-Sat</li>
