Add style to form

--- a/form.html
+++ b/form.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="#" method="post"></form>
-    <div class="wrapper">
-        <div class="form-title">
-          Registration Form
-        </div>
+        <div class="join-form"></div>
+        <p id="form-title">
+          Register to join us!
+        </p>
         <div class="form">
            <div class="fieldinput">
               <label>First Name</label>
@@ -25,10 +24,6 @@
               <label>Password</label>
               <input type="password" class="input">
            </div>  
-          <div class="fieldinput">
-              <label>Confirm Password</label>
-              <input type="password" class="input">
-           </div> 
             <div class="fieldinput">
               <label>Breed</label>
               <div class="breed_select">
@@ -53,6 +48,30 @@
                 <option value="female">Female</option>
               </select>
             </div>
+        </div> 
+        <div class="fieldinput">
+          <label>Email Address</label>
+          <input type="text" class="input">
+       </div> 
+      <div class="fieldinput">
+          <label>Phone Number</label>
+          <input type="text" class="input">
+       </div> 
+      <div class="fieldinput">
+          <label>Postal Code</label>
+          <input type="text" class="input">
+       </div> 
+      <div class="fieldinput-terms">
+          <label class="check">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label>
+          <p>I agree to terms and conditions</p>
+       </div> 
+      <div class="fieldinput">
+        <input type="submit" value="Join" class="btn">
+    </div>
+</div>
 
 </body>
 </html>
