Edit and style form html page

--- a/form.html
+++ b/form.html
@@ -4,74 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Form</title>
 </head>
-<body>
-        <div class="join-form"></div>
+<body id="form">
+  <form action="#" method="post">
+        <div class="join-form">
         <p id="form-title">
           Register to join us!
         </p>
-        <div class="form">
            <div class="fieldinput">
-              <label>First Name</label>
+              <label class="fname" id="fname">First Name</label>
               <input type="text" class="input">
            </div>  
             <div class="fieldinput">
               <label>Last Name</label>
               <input type="text" class="input">
            </div>  
-           <div class="fieldinput">
-              <label>Password</label>
-              <input type="password" class="input">
-           </div>  
-            <div class="fieldinput">
-              <label>Breed</label>
-              <div class="breed_select">
-                <select>
-                  <option value="">Select</option>
-                  <option value="female">American Staffordshire Terrier</option>
-                  <option value="male">Pitbull</option>
-                  <option value="female">Golden Retriever</option>
-                  <option value="female">Chihuahua</option>
-                  <option value="female">Jack Russel</option>
-                  <option value="female">Samoyed</option>
-                  <option value="female">Other</option>
-                </select>
-              </div>
-           </div>
-           <div class="fieldinput">
-            <label>Gender</label>
-            <div class="gender_select">
-              <select>
-                <option value="">Select</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-              </select>
-            </div>
-        </div> 
-        <div class="fieldinput">
-          <label>Email Address</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="fieldinput">
-          <label>Phone Number</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="fieldinput">
-          <label>Postal Code</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="fieldinput-terms">
-          <label class="check">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-          </label>
-          <p>I agree to terms and conditions</p>
-       </div> 
-      <div class="fieldinput">
-        <input type="submit" value="Join" class="btn">
-    </div>
-</div>
-
+        </div>
+      </form>
 </body>
 </html>
