Edit label and input

--- a/form.html
+++ b/form.html
@@ -14,12 +14,12 @@
           Register to join us!
         </p>
            <div class="fieldinput">
-              <label class="fname" id="fname">First Name</label>
-              <input type="text" class="input">
+              <label for="fname">First Name</label>
+              <input type="text" id="fname" name="first_name" placeholder="Please enter your full name"  >
            </div>  
             <div class="fieldinput">
-              <label>Last Name</label>
-              <input type="text" class="input">
+              <label for="lname">Last Name</label>
+              <input type="text" id="lname" name="last_name" placeholder="Please enter your last name">
            </div>  
         </div>
       </form>
