--- a/form.html
+++ b/form.html
@@ -20,8 +20,47 @@
             <div class="fieldinput">
               <label for="lname">Last Name</label>
               <input type="text" id="lname" name="last_name" placeholder="Please enter your last name">
-           </div>  
-        </div>
-      </form>
+           </div>
+           <div class="fieldinput">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Please enter your email">
+         </div>
+         <div class="fieldinput">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Please enter your password">
+       </div>
+       <div class="fieldinput">
+       <label for="dog-breed">Select Dog Breed:</label>
+    <select name="dog-breed" id="dog-breed">
+        <option value="select">Select</option>
+        <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
+        <option value="pitbull">Pitbull</option>
+        <option value="golden-retriever">Golden Retriever</option>
+        <option value="chihuahua">Chihuahua</option>
+        <option value="jack-russel">Jack Russel</option>
+        <option value="samoyed">Samoyed</option>
+        <option value="other">Other</option>
+    </select>
+  </div>
+  <div class="fieldinput">
+    <label for="gender">Select Gender:</label>
+    <select>
+      <option value="select">Select</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+  </div>
+  <div class="fieldinput">
+    <label for="phone-number">Phone Number</label>
+    <input type="text" id="phone-number" name="phone-number" placeholder="Please enter your phone number">
+ </div>
+ <div class="fieldinput">
+  <input type="checkbox" id="checkbox" name="checkbox">
+  <label for="checkbox">I agree to terms and conditions
+  </label>
+</div>
+
+
+</form>
 </body>
 </html>
