--- a/form.html
+++ b/form.html
@@ -8,24 +8,25 @@
     <title>Form</title>
 </head>
 <body id="form">
+  <main id="main-form">
   <form action="#" method="post">
         <fieldset class="join-form">
           <legend id="form-title">Register to join us!</legend>
            <div class="fieldinput">
               <label for="fname">First Name</label>
-              <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name"  >
+              <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
            </div>  
             <div class="fieldinput">
               <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name">
+              <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
            </div>
            <div class="fieldinput">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder=" Please enter your email">
+            <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
          </div>
          <div class="fieldinput">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder=" Please enter your password">
+          <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
        </div>
        <div class="fieldinput">
        <label for="dog-breed">Select Dog Breed:</label>
@@ -50,10 +51,10 @@
   </div>
   <div class="fieldinput">
     <label for="phone-number">Phone Number</label>
-    <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number">
+    <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number" required>
  </div>
  <div class="fieldinput">
-  <input type="checkbox" id="checkbox" name="checkbox">
+  <input type="checkbox" id="checkbox" name="checkbox" required>
   <label for="checkbox">I agree to terms and conditions
   </label>
 </div>
@@ -63,5 +64,14 @@
 </div>
 </fieldset>
 </form>
+<div class="footer-img"></div>
+</main>
+<footer>
+  <ul class="footer">CONTACT US!
+      <li>Email: customer-service@puppower.com</li>
+      <li>Tel: +353 83 1234 567</li>
+      <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+  </ul>
+</footer>
 </body>
 </html>
